# robotx_behavior_tree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependency.repos  package.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: BuildTest.yaml  BuildTestHumble.yaml  ROS2-Dashing.yml  ROS2-Eloquent.yml  ROS2-Foxy.yaml  ROS2-Foxy.yml  ROS2-Galactic.yaml
behavior_tree_action_builder/: CMakeLists.txt  README.md  package.xml
behavior_tree_action_builder/include/behavior_tree_action_builder/: action_node.hpp  register_nodes.hpp
include/robotx_behavior_tree/: action_node.hpp  bt_action_node.hpp  register_nodes.hpp
plugins/action/: example_action.cpp  go_action.cpp  move_goal_action.cpp  send_goal_action.cpp
robotx_behavior_msgs/: CMakeLists.txt  package.xml
robotx_behavior_msgs/msg/: TargetObject.msg  TaskObject.msg  TaskObjectArray.msg  TaskObjectsArray.msg  TaskObjectsArrayStamped.msg
robotx_behavior_msgs/srv/: Evaluation.srv
robotx_behavior_tree/: CMakeLists.txt  README.md  dependency.repos  package.xml
robotx_behavior_tree/include/robotx_behavior_tree/: action_node.hpp  to_marker.hpp
robotx_behavior_tree/models/placard_2022/meshes/: placard_2022.dae
robotx_behavior_tree/models/platypus_buoy/meshes/: platypus.dae
robotx_behavior_tree/models/sydney_regatta/meshes/: sydney_regatta_collision.dae  sydney_regatta_shore.dae
robotx_behavior_tree/plugins/action/: calculation_action.cpp  configure_controller_action.cpp  example_action.cpp  get_pose_from_buoys_action.cpp  go_around_object.cpp  go_around_object_2.cpp  move_action.cpp  move_goal_action.cpp  move_to_front_pose_of_object.cpp  move_to_gate_action.cpp  move_to_object_action.cpp  near_condition.cpp  publish_action.cpp  set_turn_action.cpp  subscribe_objects_action.cpp  wait_action.cpp
robotx_behavior_tree/src/: to_marker.cpp
robotx_behavior_tree/test/src/: test_action_node.cpp
robotx_bt_planner/: CMakeLists.txt  README.md  dependency.repos  package.xml
robotx_bt_planner/behavior_trees/: example.xml  go.xml  go_around_object.xml  move_to_front_pose_of_object.xml  move_to_gate.xml  move_to_gate2.xml  qualifyingtask.xml  qualifytask.xml  task1.xml  task2.xml  task5.xml  test.xml  test_action_node.xml  turn.xml  wait.xml
robotx_bt_planner/config/: example.yaml  go.yaml  go_around_object.yaml  loop_demo.yaml  move_to_front_pose_of_object.yaml  move_to_gate.yaml  move_to_gate_action.yaml  qualifytask.yaml  task1.yaml  task2.yaml  test_action_node.yaml  wait.yaml
robotx_bt_planner/example/: config.yaml
robotx_bt_planner/include/robotx_bt_planner/: bt_planner_component.hpp  demangle.hpp  visibility.h
robotx_bt_planner/include/robotx_bt_planner/descriptor/: data_structures.hpp  functions.hpp  operators.hpp
robotx_bt_planner/include/robotx_bt_planner/transition_events/: logging_event.hpp  transition_event.hpp
robotx_bt_planner/launch/: behavior_planning.launch.py  go.launch.py  qualifytask.launch.py  task1.launch.py  task2.launch.py  wait.launch.py
robotx_bt_planner/src/: bt_planner_component.cpp  bt_planner_node.cpp
robotx_bt_planner/src/plugin/: calculation_action.cpp
robotx_bt_planner/src/transition_events/: logging_event.cpp  transition_event.cpp
state_manager/: CMakeLists.txt  package.xml
state_manager/include/state_manager/: state_manager_component.hpp
state_manager/src/: state_manager_component.cpp  state_manager_node.cpp
