<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotx_behavior_tree</name>
  <version>0.0.0</version>
  <description>Implement elements of behavior tree</description>
  <maintainer email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behavior_tree_action_builder</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>robotx_behavior_msgs</depend>
  <depend>hermite_path_msgs</depend>
  <depend>color_names</depend>
  <depend>quaternion_operation</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
