<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotx_bt_planner</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="pythagora.yoshimoto@gmail.com">Kotaro Yoshimoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>lua_vendor</depend>
  <depend>sol_vendor</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>pluginlib</depend>
  <depend>behavior_tree_action_builder</depend>
  <depend>robotx_behavior_tree</depend>
  <depend>robotx_behavior_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hermite_path_msgs</depend>
  <depend>pugixml-dev</depend>
  <depend>boost</depend>
  <depend>libgoogle-glog-dev</depend>
<!--  <depend>robotx_behavior_tree</depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
